[package]
name = "bevy_window_utils"
version = "0.16.0"
edition = "2024"
authors = ["shwwwa", "Adam Grabski"]
description = "A library for window utils such as managing window icon and taskbar progress indicator in Bevy."
license = "MIT"
readme = "../Readme.md"
repository = "https://github.com/shwwwa/bevy_window_utils"
[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
taskbar = ["dep:winsafe"]
default = ["taskbar"]

[dependencies]
bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_image = { version = "0.16.0", default-features = false }
bevy_platform = { version = "0.16.0", default-features = false }
bevy_window = { version = "0.16.0", default-features = false }
bevy_winit = { version = "0.16.0", default-features = false }
# You can enable wayland, and other features by yourself.
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"]}

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.23", optional = true, features = ["shell"] }
